[package]
name = "harplay"
version = "0.1.0"
authors = ["Armando Perez <gmandx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
fern = { version = "^0.6", features = ["colored"] }
http = "^0.2"
hyper = "^0.13"
log = "^0.4"
paw = "^1"
rand = "^0.7"
regex = { version = "1.3", default-features = false, features = ["std"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1"
snafu = { version = "^0.6" }
structopt = { version = "^0.3", features = [ "paw" ] }
tokio = "^0.2"
url = "^2"

[dev-dependencies]
test-case = "^0.3"
assert_matches = "^1"
